trying to fix first sticky note on home page, title too low

--- a/home.css
+++ b/home.css
@@ -137,6 +137,9 @@ nav ul li a:hover img {
 .scrapbook-bg4 {
   background-image: url('sticky/sticky_note4.png');
 }
+.scrapbook-bg1 .item-text {
+    padding-bottom: 30px; /* Adjust the padding as needed */
+}
 /* Container for design items */
 .design-container {
     margin-top: 120px;
